Bug 166177 - Calc rotate mode active after insert and move
Summary: Calc rotate mode active after insert and move
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-04-14 09:51 UTC by Oliver Specht (CIB)
Modified: 2025-08-08 10:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2025-04-14 09:51:23 UTC
As a result of bug 90293 the rotate mode in Calc is not only activated if a already selected object is clicked again but also after the object is inserted.

Insert/Shape/Basic shapes/Rectangle -> click and create rectangle -> rotate mode is active

Click the object again to switch off rotate mode

Click & move the object -> rotate mode is active
Comment 1 m_a_riosv 2025-04-14 11:44:20 UTC
Reproducible
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ddc3cf99a47cb76e1386783df782e4852a19307a
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 25.2.3.1 (X86_64) / LibreOffice Community
Build ID: d8d1af5f77df955194e52baabe19324532ac8e8b
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 BogdanB 2025-04-15 08:23:49 UTC
commit d4bde4c979df6589fca2b405111e1b17fcff9ca7	[log]
author	Oliver Specht <oliver.specht@cib.de>	Thu Mar 06 16:19:55 2025 +0100
committer	Gabor Kelemen <gabor.kelemen.extern@allotropia.de>	Thu Mar 13 13:12:29 2025 +0100
tree bddc27e1e8d44ab305dc2302b313e0c2d773313a
parent 765bf4bff2b8d4ed9569e735dc663ac55ae7a424 [diff]
Comment 3 Commit Notification 2025-04-22 15:03:52 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/677e40c8b83b06ded8e06b6151f71686baf5f6b5

tdf#166177 Fixes unintended switch to rotate mode

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.