tdf#166177 Fixes unintende switch to rotate mode

Fixes switch to rotate mode after inserting or
moving a shape.

Change-Id: I4e8ce8b5891a08c6c3f20a9c29fa4bef4428eb84
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184229
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>